fix jumping vimeo player

--- a/app/src/components/FullscreenStream.css
+++ b/app/src/components/FullscreenStream.css
@@ -48,3 +48,8 @@
 	top: 0;
 	left: 0;
 }
+
+.stream-player iframe {
+	width: 100%;
+	height: 100%;
+}
